--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,30 +14,169 @@
     {% block javascripts %}
     {% endblock %}
 </head>
-<body>
-<header>
-    <div class="header m-8 flex justify-between items-center">
-        <h1 class="">Sortir !</h1>
-        <nav class="navbar">
-            <ul class="flex space-x-8 list-none">
-                {% if app.user %}
-                    <li><a href="{{ path("app_affichage_sorties") }}">Accueil</a></li>
-                    <li><a href="{{ path("nouvelle_sortie") }}">Créer une sortie</a></li>
-                    {% if is_granted("ROLE_ADMIN") %}
-                        <li><a href="{{ path('admin_gestionParticipants') }}" title="Gestion des Participants">Gestion
-                                des Participants</a></li>
-                        <li><a href="{{ path('admin_gestionVilles') }}" title="Gestion des Villes">Villes</a></li>
-                        <li><a href="{{ path('admin_gestionCampus') }}" title="Gestion des Campus">Campus</a></li>
-                    {% endif %}
-                    <li><a href="{{ path("participant_editLoggedUser") }}" title="Modifier mon profil">Mon Profil</a></li>
-                    <li><a href="{{ path("app_logout") }}" title="Déconnectez-vous">Se déconnecter</a></li>
-                {% else %}
-                    <li><a href="{{ path("app_login") }}" title="Connectez-vous">Se connecter</a></li>
+
+<body class=" bg-slate-100">
+	<nav class="navbar relative px-4 py-4 flex justify-between items-center bg-amber-600 ">
+        <h1>
+            <a class="text-3xl font-bold leading-none" href="{{ path("app_affichage_sorties") }}">
+                <img src="{{ asset('img/running-man-8580.svg') }}" alt="Mon Image SVG" class=" h-14">
+		    </a>
+            <p class=" text-white text-2xl font-semibold italic">SortirApp</p>
+        </h1>
+        <div class="lg:hidden">
+            <button class="navbar-burger flex items-center text-white p-3">
+                <svg class="block h-4 w-4 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <title>Mobile menu</title>
+                    <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
+                </svg>
+            </button>
+        </div>
+        {% if app.user %}
+            <ul class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
+                <li><a class="text-sm  text-white hover:text-gray-500" href="{{ path("nouvelle_sortie") }}">Créer une sortie</a></li>
+                {% if is_granted("ROLE_ADMIN") %}
+                    <li class="text-gray-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+                        </svg>
+                    </li>
+                    <li><a class="text-sm text-white hover:text-gray-300" href="{{ path('admin_gestionParticipants') }}">Participants</a></li>
+                    <li class="text-gray-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+                        </svg>
+                    </li>
+                    <li><a class="text-sm text-white hover:text-gray-300" href="{{ path('admin_gestionVilles') }}">Villes</a></li>
+                    <li class="text-gray-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+                        </svg>
+                    </li>
+                    <li><a class="text-sm text-white hover:text-gray-300" href="{{ path('admin_gestionCampus') }}">Campus</a></li>
+                    <li class="text-gray-300">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+                        </svg>
+                    </li>
                 {% endif %}
-            </ul>
-        </nav>
-    </div>
-</header>
+                <li><a class="text-sm text-white hover:text-gray-300" href="{{ path("participant_editLoggedUser") }}">Mon Profil</a></li>
+                    <li class="text-gray-300">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z" />
+                    </svg>
+                </li>
+                <li>
+                    <a class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold leading-none bg-gray-50 hover:bg-gray-100 rounded-xl" href="{{ path("app_logout") }}">Se déconnecter</a>
+                </li>
+            {% endif %}
+		</ul>
+	</nav>
+	<div class="navbar-menu relative z-50 hidden">
+		<div class="navbar-backdrop fixed inset-0 bg-gray-800 opacity-25"></div>
+		<nav class="fixed top-0 left-0 bottom-0 flex flex-col w-5/6 max-w-sm py-6 px-6 bg-white border-r overflow-y-auto">
+			<div class="flex items-center mb-8">
+				<a class="mr-auto text-3xl font-bold leading-none" href="#">
+                <img src="{{ asset('img/running-man-8580-noir.svg') }}" alt="Mon Image SVG" class="w-20">
+				</a>
+				<button class="navbar-close">
+					<svg class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+					</svg>
+				</button>
+			</div>
+			<div>
+				<ul>
+					<li class="mb-1">
+						<a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-amber-600 rounded" href="{{ path("nouvelle_sortie") }}">Créer une sortie</a>
+					</li>
+					<li class="mb-1">
+						<a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-amber-600 rounded" href="{{ path('admin_gestionParticipants') }}">Gestion des Participants</a>
+					</li>
+					<li class="mb-1">
+						<a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-amber-600 rounded" href="{{ path('admin_gestionVilles') }}">Villes</a>
+					</li>
+					<li class="mb-1">
+						<a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-amber-600 rounded" href="{{ path('admin_gestionCampus') }}">Campus</a>
+					</li>
+					<li class="mb-1">
+						<a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-amber-600 rounded" href="{{ path("participant_editLoggedUser") }}">Mon Profil</a>
+					</li>
+				</ul>
+			</div>
+			<div class="mt-auto">
+				<div class="pt-6">
+					<a class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-amber-600 hover:bg-amber-700  rounded-xl" href="{{ path("app_logout") }}">Se déconnecter</a>
+				</div>
+			</div>
+		</nav>
+	</div>
+</body>
+
+<script>
+// Burger menus
+document.addEventListener('DOMContentLoaded', function() {
+    // open
+    const burger = document.querySelectorAll('.navbar-burger');
+    const menu = document.querySelectorAll('.navbar-menu');
+
+    if (burger.length && menu.length) {
+        for (var i = 0; i < burger.length; i++) {
+            burger[i].addEventListener('click', function() {
+                for (var j = 0; j < menu.length; j++) {
+                    menu[j].classList.toggle('hidden');
+                }
+            });
+        }
+    }
+
+    // close
+    const close = document.querySelectorAll('.navbar-close');
+    const backdrop = document.querySelectorAll('.navbar-backdrop');
+
+    if (close.length) {
+        for (var i = 0; i < close.length; i++) {
+            close[i].addEventListener('click', function() {
+                for (var j = 0; j < menu.length; j++) {
+                    menu[j].classList.toggle('hidden');
+                }
+            });
+        }
+    }
+
+    if (backdrop.length) {
+        for (var i = 0; i < backdrop.length; i++) {
+            backdrop[i].addEventListener('click', function() {
+                for (var j = 0; j < menu.length; j++) {
+                    menu[j].classList.toggle('hidden');
+                }
+            });
+        }
+    }
+});
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {% for label, messages in app.flashes %}
     {% for message in messages %}
         <div class="alert-{{ label }}">
@@ -48,3 +187,5 @@
 {% block body %}{% endblock %}
 </body>
 </html>
+
+
