--- a/templates/sortie/details-sortie.html.twig
+++ b/templates/sortie/details-sortie.html.twig
@@ -11,21 +11,20 @@
 
 		<div class="mt-12 grid grid-cols-2 mx-auto space-x-20">
 			<div class="space-y-4">
-				<p>Nom de la sortie :
+				<p><span class=" font-semibold">Nom de la sortie :</span>
 					{{ sortie.nom }}</p>
-				<p>
-					Organisée par :
+				<p><span class=" font-semibold">Organisée par :</span>
 					<a href="{{path('participant_details', {id : sortie.organisateur.id})}}">
 						{{sortie.organisateur.pseudo}}</p>
 				</p>
 			</a>
-			<p>Date et heure de la sortie :
+			<p><span class=" font-semibold">Date et heure de la sortie :</span>
 				{{ sortie.dateHeureDebut | date("d/m/Y H:i", "Europe/Paris") }}</p>
-			<p>Date limite d'inscription :
+			<p><span class=" font-semibold">Date limite d'inscription :</span>
 				{{ sortie.dateLimiteInscription | date("d/m/Y H:i", "Europe/Paris") }}</p>
-			<p>Nombre de places :
+			<p><span class=" font-semibold">Nombre de places :</span>
 				{{ sortie.nbInscriptionMax }}</p>
-			<p>Durée :
+			<p><span class=" font-semibold">Durée :</span>
 				{% if sortie.duree | date("%h") != 0 %}
 					{{ sortie.duree | date("%h") }}
 					h 
@@ -34,40 +33,40 @@
 					{{ sortie.duree | date("%I") }}
 					min
 				{% endif %}</p>
-			<p>Description et infos :
+			<p><span class=" font-semibold">Description et infos :</span>
 				{{ sortie.infosSortie }}</p>
 			{% if sortie.motifAnnulation %}
-				<p>Motif d'annulation :
+				<p><span class=" font-semibold">Motif d'annulation :</span>
 					{{ sortie.motifAnnulation }}</p>
 			{% endif %}
 
 		</div>
 		<div class="space-y-4">
-			<p>Campus :
+			<p><span class=" font-semibold">Campus :</span>
 				{{ sortie.campus.nom }}</p>
-			<p>Ville :
+			<p><span class=" font-semibold">Ville :</span>
 				{{ sortie.lieu.ville.nom }}
 			</p>
-			<p>Lieu :
+			<p><span class=" font-semibold">Lieu :</span>
 				{{ sortie.lieu.nom }}</p>
-			<p>Rue :
+			<p><span class=" font-semibold">Rue :</span>
 				{{ sortie.lieu.rue }}</p>
-			<p>Code postal :
+			<p><span class=" font-semibold">Code postal :</span>
 				{{ sortie.lieu.ville.codepostal }}</p>
-			<p>Latitude :
+			<p><span class=" font-semibold">Latitude :</span>
 				{{ sortie.lieu.latitude }}</p>
-			<p>Longitude :
+			<p><span class=" font-semibold">Longitude :</span>
 				{{ sortie.lieu.longitude }}</p>
 		</div>
 	</div>
 
 	<div class="flex flex-col mx-auto w-1/3 m-12">
 		<p>Liste des participants inscrits :</p>
-		<table class="my-3 border-collapse border-2 border-slate-700">
-			<thead class=" bg-slate-600 text-white">
+		<table class="w-full flex flex-row flex-no-wrap sm:bg-white rounded-lg overflow-hidden sm:shadow-lg my-5">
+			<thead class="bg-amber-500 rounded-l-lg sm:rounded-none mb-2 sm:mb-0 text-white">
 				<tr>
-					<th class="w-1/3 p-2 border-2 border-slate-700">Pseudo</th>
-					<th class="w-2/3 p-2 border-2 border-slate-700">Nom</th>
+					<th class="p-2 border-2">Pseudo</th>
+					<th class="p-2 border-2">Nom</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -81,7 +80,7 @@
 						</td>
 						<td class="p-1 border border-slate-400">{{ participant.prenom }}
 							{{ participant.nom|upper }}</td>
-
+							bg-amber-500 border w-fit px-4 py-2 text-slate-100 rounded-xl font-semibold
 					</tr>
 				{% endfor %}
 			</tbody>
