--- a/templates/sortie/nouvelle-sortie.html.twig
+++ b/templates/sortie/nouvelle-sortie.html.twig
@@ -41,9 +41,9 @@
 		</div>
 
 		<div class="flex mt-12 space-x-6 justify-center">
-			{{ form_row(nouvelleSortieForm.enregistrer, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950'}}) }}
-			{{ form_row(nouvelleSortieForm.publier, { 'attr': {'class': 'border-2 border-black px-3 py-1 shadow-md shadow-slate-950'}}) }}
-			<a href="{{path('app_affichage_sorties') }}" class="border-2 border-black px-3 py-1 shadow-md shadow-slate-950 bg-red-200">Annuler</a>
+			{{ form_row(nouvelleSortieForm.enregistrer, { 'attr': {'class': 'bg-amber-500 border w-fit px-4 py-2 text-slate-100 rounded-xl font-semibold'}}) }}
+			{{ form_row(nouvelleSortieForm.publier, { 'attr': {'class': 'bg-amber-500 border w-fit px-4 py-2 text-slate-100 rounded-xl font-semibold'}}) }}
+			<a href="{{path('app_affichage_sorties') }}" class="bg-amber-500 border w-fit px-4 py-2 text-slate-100 rounded-xl font-semibold">Annuler</a>
 		</div>
 
 		{{ form_end(nouvelleSortieForm) }}
