modifications css table + autres

--- a/templates/admin/gestionCampus.html.twig
+++ b/templates/admin/gestionCampus.html.twig
@@ -3,6 +3,7 @@
 {% block title %} | Gestion des campus{% endblock %}
 
 {% block body %}
+<main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
     <div class="container mx-auto px-4">
         <h1>Gestion des Campus</h1>
         <table class="table-auto">
@@ -49,4 +50,5 @@
             </tbody>
         </table>
     </div>
+</main>
 {% endblock %}
