--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -4,12 +4,14 @@
 {% block title %}Lien de réinitialisation de mot de passe{% endblock %}
 
 {% block body %}
-<h1>Bonjour !</h1>
+<main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
+    <h1>Bonjour !</h1>
 
-<p>Pour réintialiser votre mot de passe, veillez cliquer sur le lien suivant : </p>
-    <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
+    <p>Pour réintialiser votre mot de passe, veillez cliquer sur le lien suivant : </p>
+        <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
 
-<p>Ce lien ne sera plus valide le {{ resetToken.expiresAt|date("d/m/Y à H:i") }}.</p>
+    <p>Ce lien ne sera plus valide le {{ resetToken.expiresAt|date("d/m/Y à H:i") }}.</p>
 
-<p>Merci !</p>
+    <p>Merci !</p>
+</main>
 {% endblock %}
