--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,8 +16,8 @@
 </head>
 
 <body class=" bg-slate-100">
-	<nav class="navbar relative px-4 py-4 flex justify-between items-center bg-amber-600 ">
-        <h1>
+	<nav class="navbar relative px-4 py-1 flex justify-between items-center bg-amber-600 ">
+        <h1 class="lg:flex lg:items-center lg:w-auto">
             <a class="text-3xl font-bold leading-none" href="{{ path("app_affichage_sorties") }}">
                 <img src="{{ asset('img/running-man-8580.svg') }}" alt="Mon Image SVG" class=" h-14">
 		    </a>
@@ -32,7 +32,7 @@
             </button>
         </div>
         {% if app.user %}
-            <ul class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
+            <ul class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:items-center lg:w-auto lg:space-x-6">
                 <li><a class="text-sm  text-white hover:text-gray-500" href="{{ path("nouvelle_sortie") }}">Créer une sortie</a></li>
                 {% if is_granted("ROLE_ADMIN") %}
                     <li class="text-gray-300">
@@ -66,7 +66,7 @@
                     </svg>
                 </li>
                 <li>
-                    <a class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold leading-none bg-gray-50 hover:bg-gray-100 rounded-xl" href="{{ path("app_logout") }}">Se déconnecter</a>
+                    <a class="text-sm text-white hover:text-gray-300" href="{{ path("app_logout") }}">Se déconnecter</a>
                 </li>
             {% endif %}
 		</ul>
@@ -112,6 +112,7 @@
 	</div>
 </body>
 
+ {# TODO déplacer le script dans un fichier JS #}
 <script>
 // Burger menus
 document.addEventListener('DOMContentLoaded', function() {
