--- a/templates/participant/details.html.twig
+++ b/templates/participant/details.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Hello ParticipantController!{% endblock %}
 
 {% block body %}
+<main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
     <section>
         <div class="container">
             <h1 class="text-center">
@@ -23,4 +24,5 @@
             </div>
         </div>
     </section>
+</main>
 {% endblock %}
