--- a/templates/participant/editLoggedUser.html.twig
+++ b/templates/participant/editLoggedUser.html.twig
@@ -4,7 +4,7 @@
 
 
 {% block body %}
-
+<main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
     <img src="{{ asset('uploads/avatars/' ~ app.user.image) }}" alt="Avatar de {{ app.user.pseudo }}" class="w-96">
     <h1>Editer mon profil</h1>
 
@@ -27,5 +27,6 @@
     <button type="submit" class="btn">Modifier mon mot de passe</button>
 
     {{ form_end(editLoggedUserPasswordForm) }}
+</main>
 {% endblock %}
 
