--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,6 +3,7 @@
 {% block title %}{{ parent() }}{% endblock %}
 
 {% block body %}
+<main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
 <form method="post">
 {#    {% if error %}#}
 {#        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
@@ -35,4 +36,5 @@
     <div>
         <a href="{{ path("app_forgot_password_request") }}" title="reset password">Mot de passe oublié</a>
     </div>
+</main>
 {% endblock %}
