--- a/templates/ville/index.html.twig
+++ b/templates/ville/index.html.twig
@@ -7,7 +7,7 @@
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
-
+<main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
@@ -17,4 +17,5 @@
         <li>Your template at <code><a href="{{ 'C:/Users/LENOVO/Documents/ENI/12. projet symfony/projet-sortie/templates/ville/index.html.twig'|file_link(0) }}">templates/ville/index.html.twig</a></code></li>
     </ul>
 </div>
+</main>
 {% endblock %}
