--- a/templates/sortie/details-sortie.html.twig
+++ b/templates/sortie/details-sortie.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-	<main class="container flex flex-col mx-auto">
+	<main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
 		<h1 class=" text-center mt-12">
 			Afficher une sortie
 		</h1>
