--- a/templates/sortie/annuler-sortie.html.twig
+++ b/templates/sortie/annuler-sortie.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-	<main class="flex flex-col">
+	<main class="container flex flex-col md:px-12 px-4 m-4 space-y-4">
 		<h1 class=" text-center my-5">
 			Annuler une sortie
 		</h1>
