encore du css pour accueil et créer sortie et créer lieu

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -33,7 +33,7 @@
     @apply border border-slate-400 mx-2 px-2 py-1;
   }
   form button {
-    @apply border border-slate-400 mx-2 px-2 py-1 shadow-lg text-zinc-50;
+    @apply border border-slate-400 mx-2 px-2 py-1 shadow-md shadow-slate-400 text-zinc-50;
   }
   form a {
     @apply border border-red-600 mx-2 px-2 py-1 shadow-lg;
