style fix: login bouton se connecter

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,7 +29,7 @@
            value="{{ csrf_token('authenticate') }}"
     >
 
-    <button class="btn btn-lg btn-primary" type="submit">
+    <button class="mt-2 bg-amber-500 border border-slate-400 mx-2 px-2 py-1 shadow-md shadow-slate-400 text-zinc-50 rounded-xl" type="submit">
         Se connecter
     </button>
 </form>
