--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,9 +20,9 @@
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-    <div class="checkbox mb-3">
+    <div class="checkbox my-3">
         <label>
-            <input type="checkbox" name="_remember_me"> Remember me
+            <input type="checkbox" name="_remember_me"> Se souvenir de moi
         </label>
     </div>
     <input type="hidden" name="_csrf_token"
