--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -16,10 +16,15 @@
     {% endif %}
 
     <h1 class="h3 mb-3 font-weight-normal">Connectez-vous !</h1>
+    <div>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+    </div>
+    <div class='mt-2'>
     <label for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+    </div>
+    
     <div class="checkbox my-3">
         <label>
             <input type="checkbox" name="_remember_me"> Se souvenir de moi
